RESOLVED FIXED117450
Fix the element type in the selector checkers
https://bugs.webkit.org/show_bug.cgi?id=117450
Summary Fix the element type in the selector checkers
Benjamin Poulain
Reported 2013-06-10 16:57:32 PDT
Fix the element type in the selector checkers
Attachments
Patch (2.43 KB, patch)
2013-06-10 16:58 PDT, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2013-06-10 16:58:10 PDT
Benjamin Poulain
Comment 2 2013-06-11 13:43:41 PDT
Comment on attachment 204228 [details] Patch Clearing flags on attachment: 204228 Committed r151467: <http://trac.webkit.org/changeset/151467>
Benjamin Poulain
Comment 3 2013-06-11 13:43:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.