Fix the element type in the selector checkers https://bugs.webkit.org/show_bug.cgi?id=117450

Patch by Benjamin Poulain <bpoulain@apple.com> on 2013-06-11
Reviewed by Anders Carlsson.

* css/SelectorCheckerFastPath.cpp:
(WebCore::HTMLNames::checkClassValue):
* dom/SelectorQuery.cpp:
(WebCore::SelectorDataList::executeSingleClassNameSelectorData):


Canonical link: https://commits.webkit.org/135679@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151467 268f45cc-cd09-0410-ab3c-d52691b4dbfc